syntax = "proto3";

package com.addrobots.protobuf;
option java_package = "com.addrobots.protobuf";

message Drive {
	double velocity = 1;
	string direction = 2;
	double acceleration = 3;
	double distance = 4;
	double edgeDistance = 5;
	string edgeSide = 6;
}

message Orbit {
	double velocity = 1;
	string direction = 2;
	double acceleration = 3;
	double degrees = 4;
}

message Halt {
	double acceleration = 1;
}

message VcuWrapperMessage {
	oneof msg {
		Drive drive = 1;
		Orbit orbit = 2;
		Halt halt = 3;
	}
}